--- a/packages/barnstormerui/frameworks/vue/package.json
+++ b/packages/barnstormerui/frameworks/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@barnstormer/vue",
-  "version": "2.6.1",
+  "version": "1.0.0",
   "license": "MIT",
   "sideEffects": false,
   "exports": {
@@ -65,7 +65,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://docs.barnstormerui.io/#vue",
+  "homepage": "https://docs.barnstormerui.com/#vue",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pointer0592/barnstormer.git",
