--- a/packages/barnstormerui/typography/package.json
+++ b/packages/barnstormerui/typography/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@barnstormer/typography",
-    "description": "SFUI typography plugin for Tailwind",
-    "version": "2.5.0",
+    "description": "Barnstormer UI typography plugin for Tailwind",
+    "version": "1.0.0",
     "sideEffects": false,
     "license": "MIT",
     "exports": {
@@ -34,13 +34,13 @@
     "files": [
         "dist"
     ],
-    "homepage": "https://docs.storefrontui.io/v2/",
+    "homepage": "https://docs.barnstormer.com/",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/vuestorefront/storefront-ui.git",
+        "url": "git+https://github.com/pointer0592/barnstormer.git",
         "directory": "packages/barnstormerui/typography"
     },
     "bugs": {
-        "url": "https://github.com/vuestorefront/storefront-ui/issues"
+        "url": "https://github.com/pointer0592/barnstormer/issues"
     }
 }
