--- a/packages/barnstormerui/shared/package.json
+++ b/packages/barnstormerui/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@barnstormer/shared",
   "description": "Shared set of utils and typings used by `@barnstormer/*` packages",
-  "version": "2.5.0",
+  "version": "1.0.0",
   "license": "MIT",
   "sideEffects": false,
   "exports": {
@@ -34,13 +34,13 @@
   "files": [
     "dist"
   ],
-  "homepage": "https://docs.storefrontui.io/v2/",
+  "homepage": "https://docs.barnstormer.com/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vuestorefront/storefront-ui.git",
+    "url": "git+https://github.com/pointer0592/barnstormer.git",
     "directory": "packages/barnstormerui/shared"
   },
   "bugs": {
-    "url": "https://github.com/vuestorefront/storefront-ui/issues"
+    "url": "https://github.com/pointer0592/barnstormer/issues"
   }
 }
