--- a/packages/barnstormerui/tw-plugin-peer-next/package.json
+++ b/packages/barnstormerui/tw-plugin-peer-next/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@barnstormer/tw-plugin-peer-next",
-    "description": "SFUI peer-next plugin for Tailwind",
-    "version": "2.3.1",
+    "description": "BarnstormerUI peer-next plugin for Tailwind",
+    "version": "1.0.0",
     "license": "MIT",
     "sideEffects": false,
     "exports": {
@@ -34,13 +34,13 @@
     "files": [
         "dist"
     ],
-    "homepage": "https://docs.storefrontui.io/v2/",
+    "homepage": "https://docs.barnstormer.com/",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/vuestorefront/storefront-ui.git",
+        "url": "git+https://github.com/pointer0592/barnstormer.git",
         "directory": "packages/barnstormerui/tw-plugin-peer-next"
     },
     "bugs": {
-        "url": "https://github.com/vuestorefront/storefront-ui/issues"
+        "url": "https://github.com/pointer0592/barnstormer/issues"
     }
 }
