--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   "engines": {
     "npm": ">=8.19.1",
     "yarn": ">=1.22.19",
-    "node": ">=16.0.0 <17.0.0"
+    "node": ">=20.0.0"
   },
   "packageManager": "yarn@3.7.0",
   "config": {
